# sparrow-cantrip-full

./: README.md
apps/hellorust/: CMakeLists.txt
apps/hellorust/components/main/: Cargo.toml
apps/repl/: autostart.repl
apps/rust/: Cargo.toml
apps/rust/hello/: Cargo.toml  hello.rs
apps/rust/test/: Cargo.toml  Makefile  test.rs
apps/rust/virtio-console/: Cargo.toml  Makefile
apps/system/components/DebugConsole/cantrip-shell/src/: lib.rs
docs/: RunApp.md
