[package]
name = "test"
version = "0.1.0"
edition = "2021"

[lib]
name = "test"
path = "test.rs"
crate-type = ["staticlib"]

[dependencies]
cantrip-os-common = { path = "../../system/components/cantrip-os-common", default-features = false }
libcantrip = { path = "../libcantrip" }
log = { version = "0.4", features = ["release_max_level_info"] }
sdk-interface = { path = "../../system/components/SDKRuntime/sdk-interface" }